# quant-alpha-driven

./: README.md
cogalpha-dev/: .gitignore  MANIFEST.md  README.md  pyproject.toml
cogalpha-dev/cogalpha/: __init__.py  alpha_contract.py  candidate_lifecycle.py  config.py  data.py  evaluation.py  evolution_plan.py  execution.py  factor_memory.py  factor_pool.py  factor_pool_catalog.py  feedback.py  fitness.py  governance.py  instrumentation.py  manifest.py  preflight.py  registry.py  reporting.py  schemas.py  skill_invocation.py  skill_library.py  skill_loader.py  skill_nodes.py  skills.py  tracing.py  validation_audit.py
cogalpha-dev/configs/: baseline.yaml  mvp.yaml
cogalpha-dev/factor_backtest/: __init__.py  alphalens.py  compact_output.py  engine.py  loader.py
cogalpha-dev/scripts/: backtest_factor_pool_full.py  backtest_factor_pool_run.py  export_factor_catalog.py  export_factor_pool.py  ingest_backtest_audits.py  post_formal_run.sh  prepare_company_all_a.py  prepare_hf_qlib_all_a.py  prepare_hf_qlib_csi300.py  run_agentic_mvp.py  run_factor_backtest.py  run_formal_mvp.py  run_full_backtest_with_compact.sh  run_mining_loop.sh  update_factor_memory.py  validate_qualified_factors.py
cogalpha-dev/skills/: README.md  manifest.md
cogalpha-dev/tests/: test_agentic_controller.py  test_agentic_formal_runner.py  test_agentic_replay.py  test_alpha_execution.py  test_candidate_lifecycle.py  test_cogalpha_tool_adapters.py  test_compact_output.py  test_domain_agent_node.py  test_evaluation_cache.py  test_evolution_node.py  test_evolution_plan.py  test_factor_memory.py  (+33 more)
(+61 files in other folders)
