[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogalpha"
version = "0.1.0"
description = "Skill-driven reproduction of Cognitive Alpha Mining via code-based evolution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "pydantic>=2.7",
  "numpy>=2.0",
  "pandas>=2.2",
  "scipy>=1.13",
  "ta-lib>=0.5",
  "scikit-learn>=1.5",
  "pyyaml>=6.0",
  "huggingface-hub>=1.0",
  "tables>=3.10",
  "pyarrow>=16.0",
  "alphalens-reloaded>=0.4.6",
  "empyrical-reloaded>=0.5.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
